--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body class="container">
     <div class="card">
       <img
-        src="./assests/image-equilibrium.jpg"
+        src="./image-equilibrium.jpg"
         alt="Equilibrium image"
         class="equilibrium-image"
       />
@@ -32,15 +32,15 @@
         Our equilibrium collection promotes <br />balance and calm
       </p>
       <img
-        src="./assests//icon-ethereum.svg"
+        src="./icon-ethereum.svg"
         alt="Ethereum icon"
         class="icon-ethereum"
       />
       <p class="ethereum-value">0.041 ETH</p>
-      <img src="./assests/icon-clock.svg" alt="Clock icon" class="icon-clock" />
+      <img src="./icon-clock.svg" alt="Clock icon" class="icon-clock" />
       <p class="time">3 days left</p>
       <img
-        src="./assests/image-avatar.png"
+        src="./image-avatar.png"
         alt="Creator image"
         class="creator-image"
       />
